@@ -7,7 +7,7 @@
  *                            | (__| |_| |  _ <| |___
  *                             \___|\___/|_| \_\_____|
  *
- * Copyright (C) 1998 - 2008, Daniel Stenberg, <daniel@haxx.se>, et al.
+ * Copyright (C) 1998 - 2009, Daniel Stenberg, <daniel@haxx.se>, et al.
  *
  * This software is licensed as described in the file COPYING, which
  * you should have received as part of this distribution. The terms
@@ -20,7 +20,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: content_encoding.h,v 1.11 2008-07-11 18:42:30 yangtse Exp $
+ * $Id: content_encoding.h,v 1.12 2009-05-11 09:55:28 bagder Exp $
  ***************************************************************************/
 #include "setup.h"
 
@@ -29,8 +29,11 @@
  */
 #ifdef HAVE_LIBZ
 #define ALL_CONTENT_ENCODINGS "deflate, gzip"
+/* force a cleanup */
+void Curl_unencode_cleanup(struct connectdata *conn);
 #else
 #define ALL_CONTENT_ENCODINGS "identity"
+#define Curl_unencode_cleanup(x)
 #endif
 
 CURLcode Curl_unencode_deflate_write(struct connectdata *conn,
@@ -41,5 +44,6 @@ CURLcode
 Curl_unencode_gzip_write(struct connectdata *conn,
                          struct SingleRequest *k,
                          ssize_t nread);
+
 
 #endif
